correções após validação de erros com o Prof Gerson

--- a/automanager/src/main/resources/application.properties
+++ b/automanager/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+# Configuração do Jackson para formatar datas
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=America/Sao_Paulo
 
+# Configuração do Jackson para evitar problemas com proxies do Hibernate
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# Configuração do banco de dados H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Configuração do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Desabilitar criação de constraints de foreign key
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.schema_generation.create_source=metadata
+spring.jpa.properties.hibernate.hbm2ddl.schema_generation.drop_source=metadata
+
+# Console H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
